[package]
name = "timerex"
version = "0.1.0"
authors = ["CirnoV <cirnov59@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
chrono = "0.4.19"
once_cell = "1.8.0"

[build-dependencies]
cbindgen = "0.19"
