[package]
name = "timerex"
version = "0.1.0"
authors = ["CirnoV <cirnov59@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "timerex"
crate-type = ["staticlib"]

[dependencies]
bitflags = "2.9"
libc = "0.2"
once_cell = "1.21"

[build-dependencies]
cbindgen = "0.28"
